# snake

./: Cargo.toml
src/: client_comms.rs  common.rs  comms.rs  config.rs  fsm.rs  ifc.rs  main.rs  server.rs  snake.rs  snake_cfg.rs  snake_client.rs  snake_server.rs
src/game/: game_core.rs  mod.rs  snake.rs
src/multiplayer/: client.rs  mod.rs  server.rs
